Fix #128004: Clay strips tip roundness ignored with 1.0 hardness

Caused by a subtle mistake in the translation of `sculpt_apply_hardness`
in 1d7dc7190fc2f5f0b18c.